--- a/services/pom.xml
+++ b/services/pom.xml
@@ -46,6 +46,10 @@
             <version>20190722</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.kumuluz.ee.fault.tolerance</groupId>
+            <artifactId>kumuluzee-fault-tolerance-smallrye</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>si.fri.rso.uniborrow</groupId>
