--- a/k8s/items-deployment.yaml
+++ b/k8s/items-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: items
     spec:
       containers:
-        - image: mp6079/items:2021-12-23-08-00-08
+        - image: mp6079/items:2021-12-24-19-25-11
           name: items
           env:
             - name: KUMULUZEE_DATASOURCES0_CONNECTIONURL
@@ -26,7 +26,7 @@ spec:
                   name: uniborrow-items-db-pass
                   key: password
             - name: KUMULUZEE_CONFIG_CONSUL_AGENT
-              value: http://consul-server:8500
+              value: http://consul-server:8500/
             - name: KUMULUZEE_DISCOVERY_CONSUL_AGENT
               value: http://consul-server:8500
             - name: KUMULUZEE_DISCOVERY_CLUSTER
@@ -47,7 +47,7 @@ spec:
               port: server
             initialDelaySeconds: 20
             periodSeconds: 3
-         
+
 
 ---
 
