--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -17,11 +17,15 @@ kumuluzee:
       connection-url: jdbc:postgresql://localhost:5432/items
       username: dbuser
       password: postgres
+      pool:
+        max-size: 20
   health:
     checks:
       data-source-health-check:
         type: liveness
         jndi-name: jdbc/ItemsDB
+        pool:
+          max-size: 20
     metrics:
       web-instrumentation:
         - name: items-endpoint
