--- a/api/pom.xml
+++ b/api/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
 
         <dependency>
-            <artifactId>kumuluzee-logs-log4j2</artifactId>
+            <artifactId>kumuluzee-logs-jul</artifactId>
             <groupId>com.kumuluz.ee.logs</groupId>
         </dependency>
 
