--- a/api/pom.xml
+++ b/api/pom.xml
@@ -38,14 +38,14 @@
         </dependency>
 
         <dependency>
-            <artifactId>kumuluzee-logs-jul</artifactId>
+            <artifactId>kumuluzee-logs-log4j2</artifactId>
             <groupId>com.kumuluz.ee.logs</groupId>
         </dependency>
 
         <dependency>
             <groupId>com.kumuluz.ee.logs</groupId>
             <artifactId>kumuluzee-logs-common</artifactId>
-            <version>${kumuluzee-logs.version}</version>
+            <version>1.4.2</version>
         </dependency>
 
         <dependency>
