--- a/pom.xml
+++ b/pom.xml
@@ -77,15 +77,9 @@
             </dependency>
 
             <dependency>
-                <artifactId>kumuluzee-logs-jul</artifactId>
+                <artifactId>kumuluzee-logs-log4j2</artifactId>
                 <groupId>com.kumuluz.ee.logs</groupId>
                 <version>${kumuluzee-logs.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.kumuluz.ee.fault.tolerance</groupId>
-                <artifactId>kumuluzee-fault-tolerance-smallrye</artifactId>
-                <version>${kumuluzee-fault-tolerance.version}</version>
             </dependency>
 
             <dependency>
