--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
             </dependency>
 
             <dependency>
-                <artifactId>kumuluzee-config-consul</artifactId>
+                <artifactId>kumuluzee-config-etcd</artifactId>
                 <groupId>com.kumuluz.ee.config</groupId>
                 <version>${kumuluzee-config.version}</version>
             </dependency>
@@ -80,6 +80,12 @@
                 <artifactId>kumuluzee-logs-log4j2</artifactId>
                 <groupId>com.kumuluz.ee.logs</groupId>
                 <version>${kumuluzee-logs.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.kumuluz.ee.discovery</groupId>
+                <artifactId>kumuluzee-discovery-etcd</artifactId>
+                <version>${kumuluzee-discovery.version}</version>
             </dependency>
 
             <dependency>
