--- a/services/pom.xml
+++ b/services/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>microprofile-metrics-api</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.3</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
