--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
         <kumuluzee-logs.version>1.4.2</kumuluzee-logs.version>
         <kumuluzee-fault-tolerance.version>2.1.1</kumuluzee-fault-tolerance.version>
+        <kumuluzee-openapi-mp.version>1.4.0</kumuluzee-openapi-mp.version>
 
         <postgresql.version>42.3.0</postgresql.version>
     </properties>
@@ -65,6 +66,17 @@
                 <version>${kumuluzee-discovery.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.kumuluz.ee.openapi</groupId>
+                <artifactId>kumuluzee-openapi-mp</artifactId>
+                <version>${kumuluzee-openapi-mp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.kumuluz.ee.openapi</groupId>
+                <artifactId>kumuluzee-openapi-mp-ui</artifactId>
+                <version>${kumuluzee-openapi-mp.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.kumuluz.ee.metrics</groupId>
