--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
             <dependency>
                 <artifactId>kumuluzee-logs-log4j2</artifactId>
                 <groupId>com.kumuluz.ee.logs</groupId>
-                <version>{kumuluzee-logs.version}</version>
+                <version>${kumuluzee-logs.version}</version>
             </dependency>
 
             <dependency>
