--- a/k8s/items-deployment.yaml
+++ b/k8s/items-deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: items-deployment
+  name: uniborrow-items-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: items
+      app: uniborrow-items
   template:
     metadata:
       labels:
-        app: items
+        app: uniborrow-litems
     spec:
       containers:
-        - image: mp6079/items:2022-01-09-20-46-35
+        - image: mp6079/items:2022-01-10-05-26-40
           name: items
           env:
             - name: KUMULUZEE_DATASOURCES0_CONNECTIONURL
@@ -33,6 +33,8 @@ spec:
               value: uniborrow-cluster
             - name: KUMULUZEE_SERVER_BASEURL
               value: http://uniborrow-items:8080
+            - name: KUMULUZEE_HEALTH_CHECKS_ETCDHEALTHCHECK_CONNECTIONURL
+              value: http://etcd:2379/health
           ports:
             - containerPort: 8080
               name: server
@@ -55,7 +57,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: items
+  name: uniborrow-items
 spec:
   type: ClusterIP
   ports:
@@ -63,4 +65,4 @@ spec:
       protocol: TCP
       targetPort: server
   selector:
-    app: items
+    app: uniborrow-items
