--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -17,6 +17,8 @@ kumuluzee:
       connection-url: jdbc:postgresql://localhost:5432/items
       username: dbuser
       password: postgres
+      pool:
+        max-size: 1
   config:
     etcd:
       hosts: http://localhost:2379
