--- a/k8s/items-deployment.yaml
+++ b/k8s/items-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: uniborrow-items
     spec:
       containers:
-        - image: mp6079/items:2022-01-11-03-58-17
+        - image: mp6079/items:2022-01-11-04-19-46
           name: items
           env:
             - name: KUMULUZEE_DATASOURCES0_CONNECTIONURL
@@ -43,14 +43,16 @@ spec:
             httpGet:
               path: /health/live
               port: server
-            initialDelaySeconds: 20
-            periodSeconds: 3
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 3
           readinessProbe:
             httpGet:
               path: /health/ready
               port: server
-            initialDelaySeconds: 20
-            periodSeconds: 3
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 3
 
 ---
 
